--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.100"
 axum = "0.8.7"
 dotenvy = "0.15.7"
 genai = "0.4.4"
+sensei-common = { version = "0.1.0", path = "../sensei-common" }
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.48.0", features = ["full"] }
 
