--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,16 @@ jobs:
         with:
           components: clippy, rustfmt
 
+      # 2.5 Setup Database for SQLx (query_as!)
+      - name: 🗄️ Setup SQLite DB
+        run: |
+          sudo apt-get update && sudo apt-get install -y sqlite3
+          # Create DB in server crate
+          cd crates/sensei-server
+          sqlite3 sensei_dev.db < migrations/20250101_init.sql
+          # Export env var for next steps (using GITHUB_ENV)
+          echo "DATABASE_URL=sqlite://$(pwd)/sensei_dev.db" >> $GITHUB_ENV
+
       # 3. Security Audit (Dependencies)
       - name: 🔒 Install Cargo Audit
         run: cargo install cargo-audit || true
