--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -10,10 +10,11 @@ chrono = { version = "0.4.42", features = ["serde"] }
 dotenvy = "0.15.7"
 genai = "0.4.4"
 libsqlite3-sys = "0.30.1"
-sensei-common = { version = "0.1.0", path = "../sensei-common" }
+sensei-common = { path = "../sensei-common" }
 serde = { version = "1.0.228", features = ["derive"] }
 sqlite-vec = "0.1.6"
-sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate", "chrono"] }
+# Disable default features to avoid pulling in mysql/postgres and vulnerable rsa crate
+sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate", "chrono"] }
 tokio = { version = "1.48.0", features = ["full"] }
 uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
 
