--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+async-trait = "0.1.89"
 axum = "0.8.7"
 chrono = { version = "0.4.42", features = ["serde"] }
 dotenvy = "0.15.7"
@@ -12,6 +13,7 @@ genai = "0.4.4"
 libsqlite3-sys = "0.30.1"
 sensei-common = { path = "../sensei-common" }
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 sqlite-vec = "0.1.6"
 sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"] }
 tokio = { version = "1.48.0", features = ["full"] }
