--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -14,6 +14,7 @@ libsqlite3-sys = "0.30.1"
 sensei-common = { path = "../sensei-common" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+serde_yaml = "0.9.34"
 sqlite-vec = "0.1.6"
 sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"] }
 tokio = { version = "1.48.0", features = ["full"] }
