--- a/crates/sensei-client/Cargo.toml
+++ b/crates/sensei-client/Cargo.toml
@@ -8,4 +8,5 @@ clap = { version = "4.5.53", features = ["derive"] }
 reqwest = { version = "0.12.24", features = ["json"] }
 sensei-common = { version = "0.1.0", path = "../sensei-common" }
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
