--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -24,4 +24,5 @@ uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics", 
 http-body-util = "0.1.3"
 hyper = "1.8.1"
 serde_json = "1.0.145"
+tempfile = "3.23.0"
 tower = "0.5.2"
