chore(release): include prompts.example.yaml in distribution archive

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
 
           # Config & Dist
           cp prompts.yaml $DIR/
+          cp prompts.example.yaml $DIR/
           cp .env.example $DIR/
           cp -r dist $DIR/
           cp README.md $DIR/
