--- a/crates/sensei-common/Cargo.toml
+++ b/crates/sensei-common/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
+thiserror = "2.0.17"
 
 [dev-dependencies]
 serde_json = "1.0.145"
