--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -5,25 +5,15 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-async-recursion = "1.1.1"
-async-trait = "0.1.89"
 axum = "0.8.7"
-chrono = { version = "0.4.42", features = ["serde"] }
 dotenvy = "0.15.7"
-genai = "0.4.4"
-libsqlite3-sys = "0.30.1"
-regex = "1.12.2"
-reqwest = { version = "0.12.24", features = ["json"] }
 sensei-common = { path = "../sensei-common" }
+sensei-lib = { path = "../sensei-lib" }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
-serde_yaml = "0.9.34"
-sqlite-vec = "0.1.6"
-sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"] }
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = "0.1.43"
 tracing-subscriber = "0.3.22"
-uuid = { version = "1.19.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
 
 [dev-dependencies]
 http-body-util = "0.1.3"
