--- a/crates/sensei-client/Cargo.toml
+++ b/crates/sensei-client/Cargo.toml
@@ -14,3 +14,8 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 tokio = { version = "1.48.0", features = ["full"] }
 tui-textarea = "0.7.0"
+hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http1", "tokio"] }
+tower = "0.5.2"
+http-body-util = "0.1.2"
+hyper = { version = "1.5.2", features = ["full"] }
+url = "2.5.4"
