--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       # Setup Database for sqlx macros
       - name: 🗄️ Setup SQLite DB
         run: |
-          cd crates/sensei-server
+          cd crates/sensei-lib
           sqlite3 sensei_dev.db < migrations/20250101_init.sql
           # Ignore error for vec0 extension if not present in sqlite3 CLI
           sqlite3 sensei_dev.db < migrations/20250102_vectors.sql || true
@@ -40,6 +40,7 @@ jobs:
           # Binaries
           cp target/release/sensei-server $DIR/
           cp target/release/sensei-client $DIR/
+          cp target/release/sensei-mcp $DIR/
 
           # Config & Dist
           # Rename example to default config for distribution
