--- a/crates/sensei-server/Cargo.toml
+++ b/crates/sensei-server/Cargo.toml
@@ -21,3 +21,4 @@ hyper = "1.8.1"
 serde_json = "1.0.145"
 tempfile = "3.23.0"
 tower = "0.5.2"
+sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros"] }
